# bhad

./: .gitignore  CHANGELOG.md  Example.ipynb  LICENSE  README.md  bhad.py  bhad_old.py  debug.py  env.yml  example.py  explainer.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  utils.py
.github/workflows/: publish.yml  publish_test.yml
model/: bhad.py  bhad_old.py  utils.py
src/: Example.ipynb  setup.py
src/bhad/: change_expl copy.py  change_expl.py  debug copy.py  debug.py  explainer.py  model.py  test copy.py  test.py  utils.py
src/notebooks/: Analysis_Plots.ipynb  BaFin.ipynb  Compare_rules_nbins.ipynb  Deep_Dive_Analysis.ipynb  Example copy.ipynb  Example.ipynb  Pendigits_Example.ipynb  Titanic_Example.ipynb  Toy_Example.ipynb
tests/test_utils/: test_discretize.py  test_utilize.py
