# [metadata]
# name = bhad
# version = attr: bhad.1.0.0
# author = Alexander Vosseler
# #author_email = alexander.vosseler1@allianz.com
# description = Bayesian Histogram-based Anomaly Detection
# #long_description = This is a longer description for the project
# keywords = bayesian-inference, anomaly-detection, unsupervised-learning, explainability

# [options]
# python_requires = >=3.8, <4
# install_requires = 
#     pandas
#     scikit_learn
#     statsmodels

#[options.extras_require]
#test = 
#    pytest
#    coverage
#[options.package_data]
#sample = 
#    example_data.csv'