# # https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# [metadata]
# name = test-bhad-6
# version = attr: test-bhad-6.0.0.2
# author = Alexander Vosseler
# maintainer = Alexander Vosseler
# #author_email = alexander.vosseler1@allianz.com
# url = https://github.com/AVoss84/bhad
# description = Bayesian Histogram-based Anomaly Detection
# description-file = README.md
# long_description = file: README.md
# long_description_content_type = text/markdown
# keywords = bayesian-inference, anomaly-detection, unsupervised-learning, explainability
# classifiers =
#     Programming Language :: Python :: 3
#     License :: OSI Approved :: MIT License
#     Operating System :: OS Independent

# [options]
# packages = find:
# package_dir =
#     = src
# python_requires = >=3.8, <4
# install_requires = 
#     pandas==1.5.*
#     scikit_learn==1.1.*
#     statsmodelsstatsmodels==0.13.*
#     matplotlibmatplotlib==3.6.*
#     scipy
#     tqdm

# [options.packages.find]
# where = src

# [options.extras_require]
# interactive = 
#    jupyter
#    ipykernel
# # test = 
# #    pytest
# #    coverage

# # [options.package_data]
# # sample = 
# #    example_data.csv'